--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="assets/images/icon.jpg"/>
 
-  <title>flutter_web_portfolio</title>
+  <title>Iyke</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
